feat: add sharing and invite features

--- a/emails/recall_alert.html
+++ b/emails/recall_alert.html
@@ -1,6 +1,10 @@
 <html>
 <body>
 <p>Your product was recalled.</p>
+<p style="font-size:.8em">
+  Was this helpful? <a href="{{share_twitter}}">Share on X</a> or
+  <a href="{{share_facebook}}">Share on Facebook</a>
+</p>
 </body>
 </html>
 
